<resources>
    <string name="app_name">FeelTrip</string>
    <string name="filter_prompt">Select a filter</string>
    <string name="filter_keyword">Filter by keyword(s)</string>
    <string name="mood_prompt">How do you feel?</string>

    <string name="title_activity_side_menu">sideMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_map">Map</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this app.</string>
    <!-- Extracted the hardcoded text to be placed into the values xml, for easier access in case changes need to be made -->
    <string name="load">load</string>
    <string name="display_image_here">Display Image Here</string>
    <string name="emotional_state">Emotional State</string>
    <string name="social_situation">Social Situation:</string>
    <string name="location_on">Location On</string>
    <string name="location_off">Location Off</string>
    <string name="make_public">Make Public</string>
    <string name="make_private">Make Private</string>
    <string name="choose_image">Take Photo</string>
    <string name="select_date">Select Date</string>
    <string name="submit">Submit</string>
    <string name="friends">Friends</string>
    <string name="maps">Maps</string>
    <string name="add_a_new_post">Add a new post</string>
    <string name="profile_page">Profile Page</string>
    <string name="home">Home</string>
    <string name="world">World</string>
    <string name="ProfilePicDesc">Displays the user\'s profile picture.</string>
    <string name="my_profile">My Profile</string>
    <string name="login_name">#LOGIN NAME#</string>
    <string name="title_home">Home</string>
    <string name="title_map">Maps</string>
    <string name="title_profile">Profile</string>
    <string name="hintfilter">Enter a keyword to filter</string>
    <string name="default_off">Off</string>
    <string name="default_photo_off">None</string>
    <string name="default_photo_on">Yes</string>
    <string name="mode_private">Private</string>
    <string name="mode_public">Public</string>

    <string name="emotion_angry">Angry</string>
    <string name="emotion_confused">Confused</string>
    <string name="emotion_disgusted">Disgusted</string>
    <string name="emotion_fearful">Fearful</string>
    <string name="emotion_happy">Happy</string>
    <string name="emotion_sad">Sad</string>
    <string name="emotion_shameful">Shameful</string>
    <string name="emotion_cool">Cool</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close Drawer</string>


</resources>
