<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText android:id="@+id/moodEventDescription"
        android:layout_weight="0.38"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:inputType="text"
        android:hint="@string/mood_prompt"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp"/>
    <!-- Added a description for the image-->
    <ImageView
        android:id="@+id/imgView"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_weight="1"
        android:layout_below="@id/moodEventDescription"
        android:contentDescription="@string/display_image_here">
    </ImageView>

    <TextView
        android:id="@+id/spinner1_desc"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_below="@id/imgView"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/emotional_state"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/emotional_state_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/filter_prompt"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/spinner1_desc"
        android:layout_marginLeft="5dp">
    </Spinner>

    <TextView
        android:id="@+id/spinner2_desc"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_below="@id/emotional_state_spinner"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/social_situation"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/social_event_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/filter_prompt"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/spinner2_desc"
        android:layout_marginLeft="5dp">
    </Spinner>

<!--    <Button
        android:id="@+id/toggle_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show location?"
        android:layout_below="@id/imgView"
        android:layout_toRightOf="@id/spinner1_desc"
        android:layout_marginTop="5dp"/>
-->
    <ToggleButton
        android:id="@+id/toggle_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/location_on"
        android:textOff="@string/location_off"
        android:layout_below="@id/imgView"
        android:layout_toRightOf="@id/spinner1_desc"
        android:layout_marginTop="5dp"/>
<!--
    <Button
        android:id="@+id/toggle_public"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Make Public?"
        android:layout_below="@id/toggle_location"
        android:layout_toRightOf="@id/spinner2_desc"
        android:layout_marginTop="30dp"/>
-->
    <ToggleButton
        android:id="@+id/toggle_public"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/make_public"
        android:textOff="@string/make_private"
        android:layout_below="@id/toggle_location"
        android:layout_toRightOf="@id/spinner2_desc"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_image"
        android:layout_below="@id/imgView"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:layout_below="@id/take_photo"
        android:layout_toRightOf="@id/toggle_public"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/post_mood_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"/>

</RelativeLayout>
